Table movies {
  id INTEGER [pk]
  title TEXT
  year INTEGER
  genre TEXT
}

Table directors {
  id INTEGER [pk]
  first_name TEXT
  last_name TEXT
  country TEXT
}

Table movie_director {
  movie_id INTEGER [ref: > movies.id]
  director_id INTEGER [ref: > directors.id]
}

Table ratings {
  id INTEGER [pk]
  movie_id INTEGER [ref: > movies.id]
  rating INTEGER
}
